<resources>
    <string name="app_name">Medistats</string>
    <string name="back">Back Button</string>
    <string name="signup">Sign Up</string>
    <string name="signin">LogIn</string>
    <string name="singupmsg">You dont have an account?<b>SIGNUP</b></string>
    <string name="forgetpass">Forgot Password</string>
    <string name="user">User</string>
    <string name="doc">Doctor</string>
    <string name="data">Go To Database</string>
    <string name="IVF">Go To IVF</string>
    <string name="cross">Cross Image</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="cnfrmpass">Confirm Password Again</string>
    <string name="who">Who are you?</string>
    <string name="phoneno">Mobile Number</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="oth">Others</string>
    <string name="hospital_name">Hospital Name OR Private Practitioner?</string>
    <string name="proof">Upload Valid ID For Proof</string>
    <string name="upload">Upload</string>
    <string name="create_acc">Create Account</string>
    <string name="al_mem">Already a member? Login</string>
    <string name="fname">First Name</string>
    <string name="mname">Middle Name</string>
    <string name="lname">Last Name</string>
    <string name="dob">01/01/1990</string>
    <string name="pass_res">Reset Your Password</string>
    <string name="pass_res_mail">Enter Your Email To Reset Password</string>
    <string name="title_activity_user_home">Home Screen</string>
    <string name="myprof">My Profile</string>
    <string name="history">History</string>
    <string name="report">Report</string>
    <string name="diary">Diary</string>
    <string name="upload_pic">Upload Picture</string>
    <string name="doc_no">Doctor Number</string>
    <string name="doc_name">Doctor Name</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="hcare">Helath Care Medical Policy</string>
    <string name="addr">Address</string>
    <string name="occ">Occupation</string>
    <string name="d0b">Date of Birth</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">AB</string>
    <string name="o">O</string>
    <string name="blood_grp">Blood Group</string>
    <string name="search">Search</string>
    <string name="recent_hist">Recent History</string>
    <string name="back_hist">Back History</string>
    <string name="family_hist">Family History</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="rarrow">Right Arrow</string>
    <string name="parent_hist">Parental History</string>
    <string name="sibling_hist">Sibling History</string>
    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!-- Navigation Drawer menu labels -->
    <string name="activity_title_home">Home</string>
    <string name="action_edit_prof">Edit Profile</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_ivf">Go To IVF</string>
    <string name="activity_title_partners">Partners</string>
    <!-- Toolbar titles when navigation menu item is selected -->
    <string name="action_logout">Logout</string>
    <!-- Arrays -->
    <string-array name="heightf">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="heighti">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="diseases">
    	<item>Malaria</item>
    	<item>Influenza</item>
    	<item>Typhoid</item>
    	<item>Cholera</item>
    	<item>Small Pox</item>
    	<item>Chicken Pox</item>
    	<item>Severe Respiratory Distress</item>
    	<item>Yellow Fever</item>
    	<item>HIV</item>
    	<item>Measles</item>
    	<item>Mumps</item>
    	<item>Diptheria</item>
    	<item>Dysentry</item>
    	<item>Poliomyelitis</item>
    	<item>Dengu Fever</item>
    	<item>Pertussis</item>
    	<item>Bubonic Plague</item>
    	<item>Epidermic Typhus</item>
    	<item>Hepatitis</item>
    	<item>Encephalitis</item>
    	<item>High BP</item>
    	<item>Low BP</item>
    	<item>Tuberclosis</item>
    	<item>Kala azar</item>
    	<item>Rift Valley Fever</item>
    	<item>Chikungunya</item>
    	<item>Leptospirosis</item>
    	<item>Schistosomiasis</item>
    	<item>Meningococcal Meningitis</item>
    	<item>Rabies</item>
    </string-array>
    <string-array name="genetic_disease">
    	<item>Cystic Fibrosis</item>
    	<item>Fragile X Syndrome</item>
    	<item>Gaucher\'s Disease</item>
    	<item>Hemochromatosis</item>
    	<item>Huntington Disease</item>
    	<item>Klinefelter Syndrome</item>
    	<item>Marfan Syndrome</item>
    	<item>Neurofibromatosis</item>
    	<item>Polycystic Kidney Disease</item>
    	<item>Sex Reversal</item>
    	<item>Turner Syndrome</item>
    </string-array>
    <string-array name="surgeries">
    	<item>Hernioplasty</item>
    	<item>Appendicectomy</item>
    	<item>C-Section(Pregnancy)</item>
    	<item>Renal Calculi</item>
    	<item>Cataract</item>
    	<item>Glaucoma</item>
    	<item>Ovariancyst</item>
    	<item>Hysterectomy</item>
    	<item>Cardiac Bypass</item>
    	<item>Cholecystectomy</item>
    	<item>Thyroldectomy</item>
    	<item>Mastectomy</item>
    	<item>Tumor Surgery</item>
    	<item>Tonsillectomy</item>
    	<item>Prostatectomy</item>
    	<item>Tympanoplasty</item>
    	<item>Adenoidectomy</item>
    </string-array>
</resources>