<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/fhist_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="@color/theme"
        android:padding="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fhist_backbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:contentDescription="@string/back"
                android:src="@drawable/arrow" />

            <TextView
                android:id="@+id/fhist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Family History"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/fhist"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:contentDescription="@string/search"
                android:src="@drawable/search" />

        </RelativeLayout>


    </android.support.v7.widget.Toolbar>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fhist_toolbar"
        android:background="@color/whitish"
        android:padding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:clickable="true"
                android:elevation="5dp"
                card_view:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/parent_hist_tx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white"
                    android:clickable="true"
                    android:padding="16dp"
                    android:text="@string/parent_hist"
                    android:textAllCaps="true"
                    android:textColor="@color/theme"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/parent_hist_im"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:contentDescription="@string/rarrow"
                    android:src="@drawable/ic_keyboard_arrow_right_black_48dp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:clickable="true"
                android:elevation="5dp"
                card_view:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/sibling_hist_tx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white"
                    android:clickable="true"
                    android:padding="16dp"
                    android:text="@string/sibling_hist"
                    android:textAllCaps="true"
                    android:textColor="@color/theme"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/sibling_hist_im"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:contentDescription="@string/rarrow"
                    android:src="@drawable/ic_keyboard_arrow_right_black_48dp" />

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
